<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FA5252"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/input_password2"
        android:layout_width="337dp"
        android:layout_height="44dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_username2" />

    <EditText
        android:id="@+id/input_username2"
        android:layout_width="333dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="192dp"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/goBackBtn"
        android:layout_width="119dp"
        android:layout_height="47dp"
        android:onClick="onGoBackClicked"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="@+id/RegisterBtn"
        app:layout_constraintEnd_toStartOf="@+id/RegisterBtn"
        app:layout_constraintTop_toBottomOf="@+id/input_password2"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/RegisterBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="39dp"
        android:onClick="onRegisterClick"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password2" />

    <!---->


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="288dp"
        android:layout_height="401dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="13dp"
        android:contentDescription="@string/dragonImg"
        android:foregroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/dragon_black_and_white_silhouette" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="225dp"
        android:layout_height="166dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/swordImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sword_png_icon_20" />

    <ProgressBar
        android:id="@+id/progressBar_cyclic"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>